app/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: db
  name: db
spec:
  replicas: 2
  selector:
    matchLabels:
      app: db
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: db
    spec:
      containers:
        - image: postgres:9.4
          name: postgres
          ports:
            - containerPort: 5432
          resources: {}
status: {}
