app/result-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: result
  name: result
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: result
    spec:
      containers:
        - image: dockersamples/examplevotingapp_result:before
          name: examplevotingapp-result-kb772
          ports:
            - containerPort: 80
          resources: {}
status: {}
