app/visualizer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: visualizer
  name: visualizer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: visualizer
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: visualizer
    spec:
      containers:
      - image: dockersamples/visualizer:stable
        name: visualizer
        ports:
        - containerPort: 8080
        resources: {}
status: {}
