app/vote-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: vote
  name: vote
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: vote
    spec:
      containers:
        - image: dockersamples/examplevotingapp_vote:before
          name: examplevotingapp-vote-kzbvg
          ports:
            - containerPort: 80
          resources: {}
status: {}
