app/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: worker
  name: worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: worker
    spec:
      containers:
        - image: dockersamples/examplevotingapp_worker
          name: examplevotingapp-worker-65ltn
          resources: {}
status: {}
