app/vote_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: vote
  name: vote
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 80
  selector:
    app: vote
  type: NodePort
status:
  loadBalancer: {}
